<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>gatling-perfromance</groupId>
    <artifactId>template</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <scala.version>2.12.6</scala.version>
        <encoding>UTF-8</encoding>
        <gatling.version>2.3.1</gatling.version>
        <gatlingmaven.version>2.2.4</gatlingmaven.version>
        <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-app</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-core</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-recorder</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling.highcharts</groupId>
                <artifactId>gatling-charts-highcharts</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-compiler</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-http</artifactId>
                <version>${gatling.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-compiler</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-reflect</artifactId>
                <version>${scala.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>io.gatling.highcharts</groupId>
            <artifactId>gatling-charts-highcharts</artifactId>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-app</artifactId>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-recorder</artifactId>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-compiler</artifactId>
        </dependency>
        <dependency>
            <groupId>io.gatling</groupId>
            <artifactId>gatling-http</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-reflect</artifactId>
        </dependency>
    </dependencies>

    <build>
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>${scala-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                            <configuration>
                                <args>
                                    <arg>-target:jvm-1.8</arg>
                                    <arg>-deprecation</arg>
                                    <arg>-feature</arg>
                                    <arg>-unchecked</arg>
                                    <arg>-language:implicitConversions</arg>
                                    <arg>-language:postfixOps</arg>
                                </args>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>io.gatling</groupId>
                <artifactId>gatling-maven-plugin</artifactId>
                <version>${gatlingmaven.version}</version>
                <configuration>
                    <simulationClass>com.simulations.${simulationClass}</simulationClass>
                    <jvmArgs>
                        <jvmArg>-server</jvmArg>
                        <jvmArg>-XX:+UseThreadPriorities</jvmArg>
                        <jvmArg>-XX:ThreadPriorityPolicy=42</jvmArg>
                        <jvmArg>-Xms512M</jvmArg>
                        <jvmArg>-Xmx5G</jvmArg>
                        <jvmArg>-Xmn100M</jvmArg>
                        <jvmArg>-Xss2M</jvmArg>
                        <jvmArg>-XX:+HeapDumpOnOutOfMemoryError</jvmArg>
                        <jvmArg>-XX:+AggressiveOpts</jvmArg>
                        <jvmArg>-XX:+OptimizeStringConcat</jvmArg>
                        <jvmArg>-XX:+UseFastAccessorMethods</jvmArg>
                        <jvmArg>-XX:+UseParNewGC</jvmArg>
                        <jvmArg>-XX:+UseConcMarkSweepGC</jvmArg>
                        <jvmArg>-XX:+CMSParallelRemarkEnabled</jvmArg>
                        <jvmArg>-XX:+CMSClassUnloadingEnabled</jvmArg>
                        <jvmArg>-XX:CMSInitiatingOccupancyFraction=75</jvmArg>
                        <jvmArg>-XX:+UseCMSInitiatingOccupancyOnly</jvmArg>
                        <jvmArg>-XX:SurvivorRatio=8</jvmArg>
                        <jvmArg>-XX:MaxTenuringThreshold=1</jvmArg>
                        <jvmArg>-XX:+PrintGCDetails</jvmArg>
                        <jvmArg>-XX:+PrintGCTimeStamps</jvmArg>
                        <jvmArg>-Xloggc:gc.log</jvmArg>
                    </jvmArgs>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
